<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/cardViewLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/white"
        android:elevation="4dp"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="2dp"
        android:textAlignment="center"
        app:cardCornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtNameLo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="sans-serif"
            android:hint="@string/hint_name"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="14sp"
            android:typeface="normal" />

        <TextView
            android:id="@+id/txtAddressLo"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="50dp"
            android:hint="@string/hint_address" />

        <TextView
            android:id="@+id/txtCityLo"
            android:layout_width="159dp"
            android:layout_height="40dp"
            android:layout_marginTop="100dp"
            android:hint="@string/hint_city" />

        <TextView
            android:id="@+id/txtCountryLo"
            android:layout_width="234dp"
            android:layout_height="40dp"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="100dp"
            android:hint="@string/hint_pais" />
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>