<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:elevation="4dp"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="4dp">

        <TextView
            android:id="@+id/txtkeyEc"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:hint="@string/hint_keyEc"
            android:padding="5dp"
            android:textAlignment="textStart" />

        <TextView
            android:id="@+id/txtNameEC"
            android:layout_width="291dp"
            android:layout_height="35dp"
            android:layout_marginStart="100dp"
            android:hint="@string/hint_nameEc"
            android:padding="5dp"
            android:textAlignment="textStart" />

        <TextView
            android:id="@+id/txtDescEC"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="35dp"
            android:padding="5dp"
            android:text="@string/hint_descEc"
            android:textAlignment="textStart" />
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>